# Blogging-Software

./: .gitignore  Article.cpp  Articles.hpp  BlogConfig.cpp  BlogConfig.hpp  CMakeLists.txt  EditLog.cpp  Index.cpp  Index.hpp  LICENSE  README  RSS.cpp  RSS.hpp  String.hpp  Tags.cpp  Tags.hpp  default.css  main.cpp  tests.h
testblog/: config.txt  featuredtags.txt
testblog/articles_src/a1/: article.txt
testblog/articles_src/a2/: article.txt  authors.txt  editlog.txt  myhtml.html  tags.txt
